--- a/samples/github-pages/index.html
+++ b/samples/github-pages/index.html
@@ -4,4 +4,9 @@
 <style>
  body, html {width: 100%; height: 100%;}
 </style>
+<script type="module">
+ import {start} from "./ui/view.js"   /* https://dobbs.gitub.io/wiki-21/ui/view.js    */
+ start()
+</script>
+
 <h1>Hello, World!</h1>
