--- a/samples/event-stream/prototype.html
+++ b/samples/event-stream/prototype.html
@@ -8,7 +8,12 @@
   td { vertical-align:top; text-align:center; padding:6px; }
 </style>
 
-<p>Event Stream Prototype. <a href=https://github.com/dobbs/wiki-21/blob/main/samples/event-stream/prototype.html>github</a></p>
+<p>
+  Event Stream Prototype.
+  <a href=https://github.com/dobbs/wiki-21/blob/main/samples/event-stream/prototype.html>github</a>,
+  <a href=http://small.fed.wiki/shared-state-space.html>wiki</a>
+</p>
+
 <table border="1" style="border-collapse:collapse; border-color:#ccc;" >
   <tr><th>producer <input type=checkbox id=run checked></input><th>fast<th>slow
   <tr><td id=p><td id=f><td id=s>
@@ -88,7 +93,5 @@
       await sleep(rand(1500))
     }
   }
-
-
 
 </script>
