--- a/samples/event-stream/prototype.html
+++ b/samples/event-stream/prototype.html
@@ -19,45 +19,10 @@
   <tr><td id=p><td id=f><td id=m><td id=s>
 </table>
 
-<script>
+<script type=module>
 
-
-  // E V E N T   S T R E A M
-
-  let stream = []
-  let handlers = []
-
-  post = event => { stream.push(event); notify(event) }
-  notify = event => { handlers.map(cb => cb.call(stream, event)) }
-  register = handler => { handlers.push(handler) }
-
-  function open() {
-    let index = 0
-    let waiting = null
-
-    // Alert on new event available
-    register(event => {
-      if(waiting) {
-        let ready = waiting
-        waiting = null
-        ready(event)
-      }
-    })
-
-    // Promise next event when available
-    let next = () => {
-      if (index < stream.length) {
-        return stream[index++]
-      } else {
-        return new Promise(resolve => {
-          waiting = event => { index++; resolve(event) }
-        })
-      } 
-    }
-
-    return next
-  }
-
+import {post, open} from './stream.js'
+import {consumer} from './apps.js'
 
   // A P P L I C A T I O N S
 
@@ -75,15 +40,6 @@
       let event = rand(1000000)
       post(event)
       show(p, event)
-    }
-  }
-
-  async function consumer(td, ms) {
-    let next = open()
-    while(true) {
-      let event = await next()
-      show(td, event)
-      await sleep(rand(ms))
     }
   }
 
