--- a/samples/event-stream/prototype.html
+++ b/samples/event-stream/prototype.html
@@ -22,25 +22,20 @@
 <script type=module>
 
 import {post, open} from './stream.js'
-import {consumer} from './apps.js'
+import {producer, consumer} from './apps.js'
+
 
   // A P P L I C A T I O N S
 
-  const rand = mean => Math.floor(mean * (Math.random()+Math.random()))
-  const show = (td, event) => td.innerHTML += `${event}<br>`
-  const sleep = ms => new Promise(resolve => setTimeout(resolve, ms))
-
-  setInterval(producer, 1000)
+  producer(p, run, 1000)
   consumer(f, 800)
   consumer(m, 1000)
   consumer(s, 1500)
 
-  function producer() {
-    if(run.checked) {
-      let event = rand(1000000)
-      post(event)
-      show(p, event)
-    }
-  }
+
+  // L O G G I N G
+
+  const logger = async () => { let next = open(); while (true) console.log(await next()) }
+  logger()
 
 </script>
