--- a/samples/may-spike/index.html
+++ b/samples/may-spike/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>May 2021 Spike</title>
     <style>
+     html { box-sizing: border-box; }
+     *, *:before, *:after { box-sizing: inherit; }
      body, html {width: 100vw; height: 100vh; margin: 0; padding: 0;}
      body {
-         --footer-height: 3em;
+         --footer-height: 30pt;
          font-family: "Helvetica Neue", Verdana, helvetica, Arial, Sans;
          line-height: 1.3;
          color: #333333;
@@ -19,8 +21,8 @@
          overflow: auto hidden;
      }
      section {
-         flex: 0 0 430px;
-         margin: 4px;
+         flex: 0 0 490px;
+         margin: 4pt;
          background-color: white;
          padding: 30px;
          overflow: hidden auto;
@@ -28,8 +30,8 @@
      }
      footer {
          position: fixed; bottom: 0;
-         width: 100vw; height: calc(var(--footer-height)/2);
-         padding: calc(var(--footer-height)/4);
+         width: 100vw; height: var(--footer-height);
+         padding: 10pt;
          color: #eee; background-color: #555;
          font-size: 80%;
      }
