prefer <article> over <section>
The Mozilla Doc's for <section> suggest <article> instead, for
self-contained content, like our pages.
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/section

--- a/samples/may-spike/index.html
+++ b/samples/may-spike/index.html
@@ -20,7 +20,7 @@
          background-color: #eee;
          overflow: auto hidden;
      }
-     section {
+     article {
          flex: 0 0 490px;
          margin: 4pt;
          background-color: white;
@@ -39,7 +39,7 @@
   </head>
   <body>
     <main>
-      <section>
+      <article>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
 
 <p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
@@ -50,21 +50,8 @@
 
 <p>Pellentesque faucibus volutpat risus quis faucibus. Etiam ac ornare justo. Sed lobortis justo massa, id tincidunt mi imperdiet ac. Phasellus aliquet felis quis tempor condimentum. Ut dictum, nisi et molestie mollis, nisl lectus vulputate lorem, molestie suscipit nisi nibh tincidunt dolor. Maecenas aliquam dui vitae elit mollis molestie sit amet vitae dolor. Quisque condimentum turpis in magna congue, eu tristique leo pretium. Sed malesuada justo id mattis scelerisque. Quisque eget massa sit amet nibh malesuada blandit id at erat. Duis ultricies turpis tellus, sit amet commodo magna laoreet ut.</p>
 
-      </section>
-      <section>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
-
-<p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
-
-<p>Suspendisse eu enim fringilla, pellentesque est sed, commodo odio. Duis pellentesque interdum massa, at aliquam magna pellentesque et. Nam pellentesque turpis vitae sagittis imperdiet. Maecenas sit amet sodales risus. Fusce imperdiet massa est, at mattis neque cursus sit amet. Sed porttitor sem congue mauris interdum rutrum. Cras massa lorem, iaculis in ante pulvinar, cursus vestibulum ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum quis orci nec erat rutrum luctus ut et enim. Vivamus convallis neque et ex posuere, eget vestibulum lacus fermentum. Etiam interdum faucibus sagittis. Phasellus vehicula ut arcu vel dapibus.</p>
-
-<p>Pellentesque vulputate mauris odio. Aenean eget mauris arcu. Curabitur vel mi justo. Nam quam mauris, porta sed metus nec, tempor convallis magna. Sed augue justo, accumsan faucibus est ut, pulvinar aliquet ante. Vestibulum sit amet bibendum nisi, sed dictum justo. Curabitur efficitur urna quis est luctus fringilla.</p>
-
-<p>Pellentesque faucibus volutpat risus quis faucibus. Etiam ac ornare justo. Sed lobortis justo massa, id tincidunt mi imperdiet ac. Phasellus aliquet felis quis tempor condimentum. Ut dictum, nisi et molestie mollis, nisl lectus vulputate lorem, molestie suscipit nisi nibh tincidunt dolor. Maecenas aliquam dui vitae elit mollis molestie sit amet vitae dolor. Quisque condimentum turpis in magna congue, eu tristique leo pretium. Sed malesuada justo id mattis scelerisque. Quisque eget massa sit amet nibh malesuada blandit id at erat. Duis ultricies turpis tellus, sit amet commodo magna laoreet ut.</p>
-
-      </section>
-      <section>
+      </article>
+      <article>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
 
@@ -76,7 +63,20 @@
 
 <p>Pellentesque faucibus volutpat risus quis faucibus. Etiam ac ornare justo. Sed lobortis justo massa, id tincidunt mi imperdiet ac. Phasellus aliquet felis quis tempor condimentum. Ut dictum, nisi et molestie mollis, nisl lectus vulputate lorem, molestie suscipit nisi nibh tincidunt dolor. Maecenas aliquam dui vitae elit mollis molestie sit amet vitae dolor. Quisque condimentum turpis in magna congue, eu tristique leo pretium. Sed malesuada justo id mattis scelerisque. Quisque eget massa sit amet nibh malesuada blandit id at erat. Duis ultricies turpis tellus, sit amet commodo magna laoreet ut.</p>
 
-      </section>
+      </article>
+      <article>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
+
+<p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
+
+<p>Suspendisse eu enim fringilla, pellentesque est sed, commodo odio. Duis pellentesque interdum massa, at aliquam magna pellentesque et. Nam pellentesque turpis vitae sagittis imperdiet. Maecenas sit amet sodales risus. Fusce imperdiet massa est, at mattis neque cursus sit amet. Sed porttitor sem congue mauris interdum rutrum. Cras massa lorem, iaculis in ante pulvinar, cursus vestibulum ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum quis orci nec erat rutrum luctus ut et enim. Vivamus convallis neque et ex posuere, eget vestibulum lacus fermentum. Etiam interdum faucibus sagittis. Phasellus vehicula ut arcu vel dapibus.</p>
+
+<p>Pellentesque vulputate mauris odio. Aenean eget mauris arcu. Curabitur vel mi justo. Nam quam mauris, porta sed metus nec, tempor convallis magna. Sed augue justo, accumsan faucibus est ut, pulvinar aliquet ante. Vestibulum sit amet bibendum nisi, sed dictum justo. Curabitur efficitur urna quis est luctus fringilla.</p>
+
+<p>Pellentesque faucibus volutpat risus quis faucibus. Etiam ac ornare justo. Sed lobortis justo massa, id tincidunt mi imperdiet ac. Phasellus aliquet felis quis tempor condimentum. Ut dictum, nisi et molestie mollis, nisl lectus vulputate lorem, molestie suscipit nisi nibh tincidunt dolor. Maecenas aliquam dui vitae elit mollis molestie sit amet vitae dolor. Quisque condimentum turpis in magna congue, eu tristique leo pretium. Sed malesuada justo id mattis scelerisque. Quisque eget massa sit amet nibh malesuada blandit id at erat. Duis ultricies turpis tellus, sit amet commodo magna laoreet ut.</p>
+
+      </article>
     </main>
     <footer>
       Site Owner: May Spike
