add page titles

--- a/samples/may-spike/index.html
+++ b/samples/may-spike/index.html
@@ -40,6 +40,7 @@
   <body>
     <main>
       <article>
+<h1>One Page Title</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
 
 <p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
@@ -52,7 +53,7 @@
 
       </article>
       <article>
-
+<h1>Another Page Here</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
 
 <p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
@@ -65,7 +66,7 @@
 
       </article>
       <article>
-
+<h1>Page Three</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus orci sit amet eros tempor aliquam. Aenean lacinia elit sem, eu posuere mauris laoreet ut. Fusce vitae lacinia turpis, vel posuere tellus. Curabitur placerat metus sapien, id accumsan mauris efficitur eu. Etiam sit amet pretium dui, in mattis lacus. Donec venenatis porttitor orci, et convallis ligula placerat nec. Cras non sapien sit amet justo consequat suscipit. Phasellus tempus mauris efficitur diam maximus aliquet. Morbi vel vulputate est. Praesent bibendum dui vel lorem consequat, ac condimentum dui rhoncus. Cras quis quam ac odio tempor porttitor. Nullam scelerisque massa in erat porta, id convallis quam tincidunt. Fusce nunc ante, feugiat a volutpat non, fringilla eget enim.</p>
 
 <p>Vivamus aliquet mollis ex in lobortis. Mauris ultricies a nibh eget maximus. Cras vehicula, sem nec vulputate tempus, urna nulla tristique eros, non tempor est mauris eget lectus. Donec sit amet elementum tellus. Praesent scelerisque enim purus, iaculis aliquam eros pretium vitae. Quisque at elementum metus, eu tincidunt lorem. Proin tempus vel sem sit amet aliquam. Etiam tristique nulla sit amet lobortis efficitur. Ut et tortor ac ex fermentum porta vel vitae lacus. Mauris dictum nec nibh sit amet posuere. Nullam venenatis velit at nulla euismod, ut vehicula libero rutrum. Suspendisse nisi leo, blandit at dapibus id, mollis et velit. Etiam vel est congue, rutrum erat id, cursus diam.</p>
