--- a/samples/aug-spike/index.html
+++ b/samples/aug-spike/index.html
@@ -4,29 +4,23 @@
     <meta charset="utf-8">
     <title>August 2021 Spike</title>
     <style>
+     /*  box-sizing reset: https://css-tricks.com/box-sizing/  */
      html { box-sizing: border-box; }
      *, *:before, *:after { box-sizing: inherit; }
-     body, html {width: 100vw; height: 100vh; margin: 0; padding: 0;}
+
      body {
          --footer-height: 30pt;
          font-family: "Helvetica Neue", Verdana, helvetica, Arial, Sans;
          line-height: 1.3;
          color: #333333;
      }
+
+     /*  footer & linup sizing and left-right scrolling  */
+     body, html {width: 100vw; height: 100vh; margin: 0; padding: 0;}
      main {
          height: calc(100vh - var(--footer-height));
-         display: flex;
-         flex-direction: row;
          background-color: #eee;
          overflow: auto hidden;
-     }
-     article {
-         flex: 0 0 490px;
-         margin: 4pt;
-         background-color: white;
-         padding: 30px;
-         overflow: hidden auto;
-         box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.2);
      }
      footer {
          position: fixed; bottom: 0;
@@ -34,6 +28,20 @@
          padding: 10pt;
          color: #eee; background-color: #555;
          font-size: 80%;
+     }
+
+     /*  display panels in columns with independent vertical scrolling  */
+     main {
+         display: flex;
+         flex-direction: row;
+     }
+     article {
+         flex: 0 0 490px;
+         overflow: hidden auto;
+         margin: 4pt;
+         padding: 30px;
+         box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.2);
+         background-color: white;
      }
     </style>
   </head>
