--- a/samples/spike-september/index.html
+++ b/samples/spike-september/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>August 2021 Spike</title>
+    <title>Spike September 2021</title>
     <style>
      /*  box-sizing reset: https://css-tricks.com/box-sizing/  */
      html { box-sizing: border-box; }
@@ -88,7 +88,8 @@
       </article>
     </main>
     <footer>
-      Site Owner: August Spike
+      Site Owner: Spike
     </footer>
+
   </body>
 </html>
