add index.html to top level

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello, Pages!</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello, Pages</title>
+    <style>nav {display:flex; flex-direction: column;} nav * {display: block;}</style>
+  </head><body>
+    <h1>Hello, Pages!</h1>
+    <nav>
+      <a href="./samples/github-pages/">github-pages</a>
+      <a href="./samples/spike-september/">spike-september</a>
+      <a href="./samples/event-stream/prototype.html">event-stream/prototype</a>
+      <a href="./samples/event-stream/generators.html">event-stream/generators</a>
+    </nav>
+  </body>
+</html>
