hide horizontal scrollbar

--- a/samples/spike-september/index.html
+++ b/samples/spike-september/index.html
@@ -27,6 +27,10 @@
        height: var(--panel-height);
        display: flex;
        overflow: scroll hidden;
+       scrollbar-width: none;
+     }
+     main::-webkit-scrollbar {
+       height: 0;
      }
      footer {
        /* wiki footer colors, height, & padding */
